# BetMate

./: .env.local.example  .gitignore  CLAUDE.md  _totals_check.py  fix_task_logon.ps1  fix_task_logon_v2.ps1  middleware.ts  package-lock.json  package.json  tmp_handicap_open_10_rounds.csv  tsconfig.tsbuildinfo
BettingEngine/: CLAUDE.md  baz_server.py  check_afl_db.py  check_db.py  requirements.txt
InPlayEngine/: pyproject.toml
InPlayEngine/inplay_engine/core/: exchange.py  halftime.py
InPlayEngine/inplay_engine/data/downloaders/: betfair.py
InPlayEngine/inplay_engine/data/processors/: extract_halftime.py
InPlayEngine/inplay_engine/sports/_template/: config.py
InPlayEngine/inplay_engine/sports/afl/: config.py
InPlayEngine/inplay_engine/sports/nrl/: config.py  features.py
InPlayEngine/scripts/: build_halftime_dataset.py  download_betfair_nrl.py
app/: globals.css  page.tsx
handover/: architecture_map.md  baz_agent_architecture.md  baz_v2_direction.md
lib/: affiliate.ts  authMode.ts  matrixEV.ts  oddsApi.ts  oddsMovement.ts  oddsSnapshotFallback.ts  owner.ts  referees.ts  researchData.ts  specialRounds.ts  supabase.ts  supabaseServer.ts  venues.ts
mobile/: app.json  package-lock.json  package.json
public/: mockup.html
scrapers/: afl_bvi.py  afl_emotional.py  afl_home_advantage.py  afl_injuries.py  afl_match_reports.py  afl_round_prep.py  afl_style_stats.py  afl_umpires.py  nrl_bvi.py  nrl_emotional.py  nrl_fixture.py  nrl_halftime_scraper.py  nrl_historical_results.py  nrl_home_advantage.py  nrl_injuries.py  nrl_match_review.py  nrl_news_flags.py  (+9 more)
(+1232 files in other folders)
